--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.pyc
 __pycache__
 db.sqlite3
+*.sqlite3
 media
 
 # Backup files # 
@@ -122,3 +123,25 @@ GitHub.sublime-settings
 
 #misc
 .remote.swp
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
